sdext/source/pdfimport/tree/writertreevisiting.hxx
@@ -24,6 +24,8 @@
 
 #include <pdfihelper.hxx>
 
+#include <com/sun/star/i18n/XCharacterClassification.hpp>
+
 namespace pdfi
 {
     struct DrawElement;
@@ -80,12 +82,14 @@ namespace pdfi
     class WriterXmlEmitter : public ElementTreeVisitor
     {
     private:
+        css::uno::Reference< css::i18n::XCharacterClassification > mxCharClass;
         EmitContext& m_rEmitContext ;
         static void fillFrameProps( DrawElement&       rElem,
                              PropertyMap&       rProps,
                              const EmitContext& rEmitContext );
 
     public:
+        const css::uno::Reference<css::i18n::XCharacterClassification >& GetCharacterClassification();
         explicit WriterXmlEmitter(EmitContext& rEmitContext) :
             m_rEmitContext(rEmitContext)
         {}
